--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 type="text" 
                 class="search-input" 
                 id="searchInput" 
-                placeholder="Search for a concept (e.g., Leverage, Hedge Fund, API)"
+                placeholder="Search for a concept (e.g., Cloud Computing, Artificial Intelligence, Hedge Fund, Blockchain, GPU)"
                 autocomplete="off"
             >
             <svg class="search-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -1332,4 +1332,5 @@
         init();
     </script>
 </body>
+
 </html>
